# toolproof

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
content/: x-article-arabic.md  x-article-educational.md  x-post-arabic.md  x-post-banger.md  x-thread-educational.md
docs/: index.html
downloads/: article-arabic.md  article-english.md  flow-diagram.html  hero-terminal.html  post-arabic.md  trust-score-card.html
openclaw/: clawhub.json
openclaw/extensions/toolproof-plugin/: index.ts  openclaw.plugin.json
openclaw/hooks/toolproof-verify/: HOOK.md
openclaw/skills/toolproof-audit/: SKILL.md
openclaw/skills/toolproof-report/: SKILL.md
tests/: test_analytics.py  test_claude_reader.py  test_cost.py  test_cross_repo_integration.py  test_evidence_hash.py  test_gate.py  test_html_report.py  test_http_proxy.py  test_mtg_bridge.py  test_mtg_bridge_dialect_picking.py  test_receipt.py  test_trust.py  test_verifier.py  test_watch.py
toolproof/: __init__.py  __main__.py  analytics.py  claude_reader.py  cli.py  display.py  feedback.py  gate.py  html_report.py  http_proxy.py  interceptors.py  mtg_bridge.py  proxy.py  receipt.py  safepath.py  sdk_patch.py  trust.py  verifier.py  watch.py
