[project]
name = "toolproof"
version = "0.2.0"
description = "Agent tool verification - catch hallucinated tool calls with signed execution receipts"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Musa the Carpenter" }]
keywords = ["agent", "tool-calling", "verification", "hallucination", "trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
]

[project.scripts]
toolproof = "toolproof.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
