[project]
name = "toolproof"
version = "0.5.1"
description = "Agent tool verification - catch hallucinated tool calls with signed execution receipts, now with MTG (Morphological Type Guards) integration"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Mousa Abumazin" }]
keywords = ["agent", "tool-calling", "verification", "hallucination", "trust", "mtg", "arabic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
]

[project.scripts]
toolproof = "toolproof.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["toolproof*"]
exclude = ["content*", "downloads*", "openclaw*", "tests*"]

[tool.pytest.ini_options]
markers = [
    "integration: cross-repo integration test (needs mtg + hurmoz checkouts)",
]
